fix overflow issue

--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -13,7 +13,7 @@
 
 body{
     //when use AOS, need to include this
-    overflow-x:hidden;
+    //overflow-x:hidden;
     padding: 0px 7vw 0px 2vw;
     background-color: #fffffe;
     box-shadow: inset 1px 1px 10px 5px rgb(197, 213, 248); 
